[package]
authors = ["{{authors}}"]
edition = "2021"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = { version = "0.2.0" }
stm32l0xx-hal = { version = "0.10.0", features = ["mcu-STM32L010F4Px", "rt", "stm32l0x1"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"


# this lets you use `cargo fix`!
[[bin]]
name = "{{project-name}}"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations